# lyrics-llm

./: .env-example  Dockerfile  pyproject.toml
data/: africa-unite.txt  buffalo-soldier.txt  exodus.txt  foo.txt  is-this-love.txt  jammin.txt  midnight-ravers.txt  punky-reggae-party.txt  redemption-song.txt  roots-rock-reggae.txt
manifests/01-nodepools/: gpu-machines.yaml
manifests/04-servicemesh/: 03-subscription.yaml
manifests/05-serverless/: 03-subscription.yaml
manifests/07-authorino/: 03-subscription.yaml
manifests/08-app/: 01-namespace.yaml  02-runtime.yaml  03-inferenceservice.yaml  04-imagestream.yaml  05-buildconfig.yaml  06-settings.yaml  07-deployment.yaml  08-service.yaml  09-route.yaml
src/: __init__.py  genius.py  gh.py  github.py  llm.py
